--- a/workers.html
+++ b/workers.html
@@ -10,7 +10,7 @@
         //<![CDATA[
             var worker = new Worker('worker.js');
             worker.onmessage = function (event) {
-                alert(event.data);
+                console.log(event.data);
             };
             worker.postMessage("Olá, mundo!");
         //]]>
