--- a/jquery-lab/form.html
+++ b/jquery-lab/form.html
@@ -29,13 +29,9 @@
 
                 $('html').keyup(function (event) {
                     if (event.keyCode == 38) {
-                        var tr = $('tr.selected');
-                        tr.prev().addClass('selected');
-                        tr.removeClass('selected');
+                        $("tr.selected").insertBefore($("tr.selected").prev());
                     } else if (event.keyCode == 40) {
-                        var tr = $('tr.selected');
-                        tr.next().addClass('selected');
-                        tr.removeClass('selected');
+                        $("tr.selected").insertAfter($("tr.selected").next());
                     } else if (event.keyCode == 8 || event.keyCode == 46) {
                         $('tr.selected').remove();
                     };
