--- a/jquery-lab/form.html
+++ b/jquery-lab/form.html
@@ -29,9 +29,11 @@
 
                 $('html').keyup(function (event) {
                     if (event.keyCode == 38) {
-                        $("tr.selected").insertBefore($("tr.selected").prev());
+                        var tr = $("tr.selected");
+                        tr.prev().before(tr);
                     } else if (event.keyCode == 40) {
-                        $("tr.selected").insertAfter($("tr.selected").next());
+                        var tr = $("tr.selected");
+                        tr.next().after(tr);
                     } else if (event.keyCode == 8 || event.keyCode == 46) {
                         $('tr.selected').remove();
                     };
